# varve

./: .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  GUIDE.md
src/varve/: __init__.py  branch.py  branch_config.py  clean.py  cli.py  command.py  context.py  decorators.py  dependencies.py  details.py  experiment.py  fileset.py  fingerprint.py  keys.py  keyspec.py  ledger.py  lock.py  log.py  matrix.py  models.py  pipeline.py  runner.py  state.py  status.py  style.py
src/varve/cli/: app.py  argmap.py  clean.py  commands.py  details.py  plan.py  review.py  run.py  status.py  structure.py
src/varve/dashboard/: __init__.py  cli.py  commands.py  discovery.py  models.py  render.py  state.py
src/varve/engine/: review.py  run_display.py  runner.py  state.py
src/varve/keying/: astkey.py  config_access.py  dependencies.py  fingerprint.py  keys.py  source.py
src/varve/store/: lock.py  store.py
tests/: test_argmap.py  test_artifact_propagation.py  test_astkey.py  test_branch.py  test_branch_config.py  test_clean.py  test_cli.py  test_collection.py  test_config_access.py  test_context.py  test_dashboard_cli.py  test_dashboard_discovery.py  test_dashboard_state.py  test_dependencies.py  test_details.py  test_experiment.py  test_fileset.py  test_fingerprint.py  test_keys.py  test_ledger.py  test_lock.py  test_log.py  test_matrix.py  test_pipeline.py  test_plan_display.py  test_review_render.py  test_run_display.py  test_runner.py  test_runner_branch.py  test_runner_log.py  test_runner_probe.py  test_source_keying.py  test_source_review.py  test_state.py  test_status.py  test_store.py  test_style.py
